--- a/index.html
+++ b/index.html
@@ -8,18 +8,20 @@
   </head>
   <body>
     <div class="shine">
-      <div></div>
+      <div>
+        <svg viewBox="0 0 600 800">
+          <path
+            fill="#FFFFFF"
+            fill-opacity="0.5"
+            d="M 50 230 C 37 201 87 176 100 200 c 10 1 -20 40 -50 30 M 133 166 Z"
+          ></path>
+        </svg>
+      </div>
     </div>
     <div class="glass">
       <div class="bowl">
         <div class="water">
-          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 600 800">
-            <path
-              class="wave1"
-              fill="#FFFFFF"
-              fill-opacity="0.5"
-              d="M 50 230 C 37 201 87 176 100 200 c 10 1 -20 40 -50 30 M 133 166 Z"
-            ></path>
+          <svg viewBox="0 0 600 800">
             <path
               class="wave1"
               fill="#6ADBD9"
