--- a/index.html
+++ b/index.html
@@ -7,32 +7,38 @@
     <title>Water Animation</title>
   </head>
   <body>
-    <div class="shine">
-      <div>
-        <svg viewBox="0 0 600 800">
-          <path
-            fill="#FFFFFF"
-            fill-opacity="0.5"
-            d="M 50 230 C 37 201 87 176 100 200 c 10 1 -20 40 -50 30 M 133 166 Z"
-          ></path>
-        </svg>
-      </div>
-    </div>
     <div class="glass">
       <div class="bowl">
         <div class="water">
           <svg viewBox="0 0 600 800">
+            <defs>
+              <linearGradient id="wave1" x1="50%" y1="0%" x2="50%" y2="100%">
+                <stop offset="0%" style="stop-color: #9aecea;" />
+                <stop offset="80%" style="stop-color: #0abbb5;" />
+              </linearGradient>
+              <linearGradient id="wave2" x1="50%" y1="0%" x2="50%" y2="100%">
+                <stop offset="0%" style="stop-color: #0abbb5;" />
+                <stop offset="100%" style="stop-color: #9aecea;" />
+              </linearGradient>
+            </defs>
             <path
               class="wave1"
-              fill="#6ADBD9"
+              fill="url(#wave1)"
               fill-opacity="1"
               d="M 0 300 c 150 -100 150 100 300 0 c 150 -100 150 100 300 0 L 600 500 L 0 500 Z"
             ></path>
             <path
               class="wave2"
-              fill="#9AECEA"
+              fill="url(#wave2)"
               fill-opacity="1"
               d="M 0 300 c 150 100 150 -100 300 0 c 150 100 150 -100 300 0 L 600 500 L 0 500 Z"
+            ></path>
+            <path
+              fill="#ffffff"
+              fill-opacity="0.3"
+              d="
+                M 150 150 A 10 10 0 1 1 150 450 A 8 10 0 1 0 150 150 
+                M 150 165 A 5 5 0 1 1 150 185 Q 105 180 65 215 A 8 8 0 1 1 50 205 Q 85 165 150 165 Z"
             ></path>
           </svg>
         </div>
